<resources>
    <string name="app_name">STDHR (Cultural heritage)</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Warning">Warning</string>
    <string name="Ok">Ok</string>

    <!-- Strings for the activities -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_radar">RadarActivity</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_preferences_activity">Preferences_activity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- String for the main activity -->
    <string name="main_title_1">HES-SO,Médiathèque du Valais!</string>
    <string name="main_title_2">SPATIO-TEMPORAL DIGITAL HERITAGE RADAR!</string>
    <string name="txt_btn_radar">RADAR</string>
    <string name="txt_btn_gmap">GOOGLE MAP</string>
    <string name="txt_btn_search">SEARCH</string>
    <string name="txt_btn_settings">SETTINGS</string>

    <!-- String for the radar activity -->
    <string name="txt_radius_of_search">Radius of search</string>
    <string name="txt_radar_doing_first_search">The radar is doing a first search!</string>
    <string name="txt_btn_stop_radar">STOP</string>
    <string name="txt_btn_start_radar">START</string>
    <string name="txt_btn_continue_radar">CONTINUE</string>
    <string name="txt_radar_possible_mode">The function radar only works with Androjena!</string>
    <string name="txt_cultural_objects_in_proximity">cultural object(s) in proximity!</string>

    <!-- String for the google Map activity -->

    <!-- String for the Citizen Search activity -->
    <string name="lbl_place">Place</string>
    <string name="lbl_description"></string>
    <string name="lbl_date">Date</string>
    <string name="date">Period</string>
    <string name="siecle">1900-2016</string>
    <string name="period">Period</string>
    <string name="lbl_request">SEARCH</string>
    <string name="txt_no_reponse_from_the_server">no response from the server!</string>

    <string name="not_valid_place">* A place has to be given!</string>
    <string name="not_valid_period">* A period has to be given!</string>
    <string name="place">Place</string>

    <!-- Strings for settings activity -->
    <string name="title_settings_raysearch">Radius of search [m]</string>
    <string name="activate_radar">Activate the radar</string>
    <string name="action_clientserver_communication">Client-server communication</string>
    <string name="action_subject">Search restrictions</string>
    <string name="themes_restrictions">Search restrictions</string>
    <string name="action_sign_in">action_sign_in</string>

    <!-- Strings for AsyncTask -->
    <string name="citizen_search">Searching Cityzen Data..</string>
    <string name="wait">Please wait</string>

    <string name="action_search">Cityzen search</string>
    <string name="action_settings">Settings</string>
</resources>
