<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hesso.mas.stdhb.Client.Gui.Main.MainActivity"
    android:background="#084B8A">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mImgSettings"
        android:src="@mipmap/ic_settings"
        android:layout_alignRight="@+id/mDtxtTitleRadar"
        android:visibility="invisible" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mBtnradar"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_radar"
        android:onClick="Radar"
        android:layout_alignTop="@+id/mBtnSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/mBtnSearch"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_search"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/mDtxtTitleRadar"
        android:layout_alignEnd="@+id/mDtxtTitleRadar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_gmap"
        android:id="@+id/mBtnMap"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo_valais_digital"
        android:id="@+id/mImgLogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_radar"
        android:id="@+id/mImgRadar"
        android:layout_below="@+id/mTxtTitle2"
        android:layout_above="@+id/mBtnSearch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/mBtnMap"
        android:layout_alignStart="@+id/mBtnMap"
        android:soundEffectsEnabled="false" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_hesso"
        android:id="@+id/mImgLogoHesSo"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/mImgLogo"
        android:layout_toEndOf="@+id/mImgLogo" />

    <TextView
        android:id="@+id/mTxtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title_2"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/mDtxtTitleRadar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/mDtxtTitleRadar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title_1"
        android:layout_marginTop="49dp"
        android:textColor="#DF013A"
        android:textStyle="bold"
        android:textSize="32dp"
        android:textIsSelectable="false"
        android:layout_below="@+id/mImgSettings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
