<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hesso.mas.stdhb.Client.Gui.Config.SettingsActivity"
    android:background="#084B8A"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activate_radar"
                android:textColor="#ffffff"
                android:id="@+id/RadarSwitch"
                android:layout_column="22"
                android:checked="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_settings_raysearch"
                android:textColor="#ffffff"
                android:id="@+id/mLblRadiusSearch"
                android:layout_column="22" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mDTxtRadius"
                android:textColor="#ffffff"
                android:layout_column="25" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/action_clientserver_communication"
                android:textColor="#ffffff"
                android:layout_column="22"
                android:layout_above="@+id/btnSave"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner android:id="@+id/mDcboCommunication"
                android:textColor="@color/colorWhite"
                android:textSize="11dp"
                android:layout_column="22" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/action_subject"
                android:textColor="#ffffff"
                android:layout_column="22"
                android:layout_above="@+id/btnSave"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner android:id="@+id/mDcboSubject"
                android:textColor="@color/colorWhite"
                android:textSize="11dp"
                android:layout_column="22" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themes_restrictions"
                android:textColor="#ffffff"
                android:id="@+id/mLblSearchRestriction"
                android:layout_column="22" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/mLstViewCITyp"
                android:layout_alignBottom="@+id/tableLayout"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="155dp"
                android:layout_column="22" />
        </TableRow>
    </TableLayout>

</RelativeLayout>


